--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -19,7 +19,7 @@ $theme-styles: (
 			sans-serif: ('Poppins', 'Helvetica Neue', Helvetica, 'Roboto', sans-serif)
 		),
 		colors: (
-			blue:  #2859da,
+			blue:  #0078D4,
 			green: #01be54,
 			red:   #0078D4
 		)
